feat/groupMain: 모인 메인화면
