# modules/swagger/response/GroupResponse.yaml
@@ -3,7 +3,6 @@
 ###################################################
 components:
   schemas:
-
     # 기본적인 응답 object (성공 여부, 응답 메시지)
     groupApiResult:
       required:
@@ -78,3 +77,49 @@ components:
           format: date-time
           description: 모임 수정 시간
           example: 2023-10-31
+
+    # 모임 정보 object
+    groupMain:
+      type: object
+      description: 모임 정보
+      properties: # res.json으로 정의한 값 정의
+        result:
+          type: boolean
+          description: 회원/비회원 여부
+          example: true
+        isJoin:
+          type: boolean
+          description: 모임가입/ 비가입 여부
+          example: true
+        isLeader:
+          type: boolean
+          description: 모임장인지 여부
+          example: true
+        groupMission:
+          type: object
+          description: 모임 미션(mTitle:미션 제목, mContent:미션 내용)
+        memberNickname:
+          type: array
+          description: 모임 멤버 닉네임
+        memberImg:
+          type: array
+          description: 모임 멤버 이미지
+          example: 닉네임 배열 인덱스와 동일
+        groupName:
+          type: string
+          description: 모임 이름
+        groupMaxMember:
+          type: number
+          description: 모임 최대인원
+        grInformation:
+          type: string
+          description: 모임 설명
+        groupDday:
+          type: number
+          description: 모임 디데이
+        groupCategory:
+          type: string
+          description: ex = 운동 / re = 독서 / st = 스터디 / eco = 경제 / lan = 언어 / cert = 자격증 / it = IT / etc = 기타
+        groupCoverImg:
+          type: string
+          description: 모임 커버 이미지 경로
